// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders caption applying style 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "Helvetica Neue",
        "textAlign": "left",
        "writingDirection": "ltr",
      },
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "fontSize": 12,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          Object {
            "color": "red",
            "fontSize": 20,
          },
        ],
        Array [
          Object {
            "fontSize": 12,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          Object {
            "color": "red",
            "fontSize": 20,
          },
        ],
      ],
    ]
  }
  theme={
    Object {
      "colors": Object {
        "accent": "#03dac4",
        "backdrop": "rgba(0, 0, 0, 0.5)",
        "background": "#f6f6f6",
        "disabled": "rgba(0, 0, 0, 0.26)",
        "error": "#B00020",
        "placeholder": "rgba(0, 0, 0, 0.54)",
        "primary": "#6200ee",
        "surface": "#ffffff",
        "text": "#000000",
      },
      "dark": false,
      "fonts": Object {
        "light": "HelveticaNeue-Light",
        "medium": "HelveticaNeue-Medium",
        "regular": "Helvetica Neue",
        "thin": "HelveticaNeue-Thin",
      },
      "roundness": 4,
    }
  }
>
  Big and red caption
</Text>
`;

exports[`renders caption with children as content 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "Helvetica Neue",
        "textAlign": "left",
        "writingDirection": "ltr",
      },
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "fontSize": 12,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          undefined,
        ],
        Array [
          Object {
            "fontSize": 12,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          undefined,
        ],
      ],
    ]
  }
  theme={
    Object {
      "colors": Object {
        "accent": "#03dac4",
        "backdrop": "rgba(0, 0, 0, 0.5)",
        "background": "#f6f6f6",
        "disabled": "rgba(0, 0, 0, 0.26)",
        "error": "#B00020",
        "placeholder": "rgba(0, 0, 0, 0.54)",
        "primary": "#6200ee",
        "surface": "#ffffff",
        "text": "#000000",
      },
      "dark": false,
      "fonts": Object {
        "light": "HelveticaNeue-Light",
        "medium": "HelveticaNeue-Medium",
        "regular": "Helvetica Neue",
        "thin": "HelveticaNeue-Thin",
      },
      "roundness": 4,
    }
  }
>
  Caption content
</Text>
`;
